# OpenHarmony_Scrcpy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.txt  ChangeLog.txt  LICENSE  README.md
Client/: README.md  main.py  ohscrcpy_client.py  requirements.txt
Package/: build.bat  build.sh  build_executer.bat  build_executer.sh  build_installer.bat  build_installer.sh  get_version.bat  get_version.sh  package_ohscrcpy.bat  package_ohscrcpy.sh  使用说明.md  打包工具使用说明.md
Server/: BUILD.gn  README.md  build_ohscrcpy_server.sh  install_ohscrcpy_server.bat  install_ohscrcpy_server.sh  ohscrcpy_server.cfg  ohscrcpy_server.cpp  ohscrcpy_server.patch  start_ohscrcpy_server.bat  start_ohscrcpy_server.sh  uninstall_ohscrcpy_server.bat  uninstall_ohscrcpy_server.sh
Server/include/: capture_wrapper.h  codec_wrapper.h  error_codes.h  logger.h
Server/src/: capture_wrapper.cpp  codec_wrapper.cpp  logger.cpp  ohscrcpy_server.cpp
docs/: GitCode_CI_CD配置指南.md  GitHub_Actions_CI_CD配置指南.md  H265与分辨率校验设计方案.md  Windows系统macOS虚拟机配置指南.md  【原创】OpenHarmony系统投屏工具软件 - OpenHarmony_OHScrcpy使用推荐.md  重构改进计划.md
scripts/: delete_server_logs.bat  delete_server_logs.sh  fetch_and_delete_server_logs.bat  fetch_and_delete_server_logs.sh  fetch_server_logs.bat  fetch_server_logs.sh  generate_bat_scripts.sh
tests/: conftest.py  requirements-test.txt  run_all_tests.bat  run_all_tests.sh  run_integration_tests.bat  run_integration_tests.sh  run_performance_tests.bat  run_performance_tests.sh  run_tests.bat  run_tests.sh  run_unit_tests.bat  test_decoder.py  test_device_manager.py  test_fixtures.py  test_protocol.py  (+5 more)
(+60 files in other folders)
