# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("ohscrcpy_server") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "ohscrcpy_server.cpp",
  ]
  
  deps = [
    "../interfaces/kits/c:native_avscreen_capture",
  ]

  external_deps = [
    "av_codec:native_media_venc",
    "av_codec:native_media_codecbase",
    "media_foundation:native_media_core",
    "graphic_surface:surface",
    "window_manager:libdm",
    "c_utils:utils",
  ]
  
  subsystem_name = "multimedia"
  part_name = "player_framework"
}

ohos_prebuilt_etc("ohscrcpy_server_config") {
  source = "ohscrcpy_server.cfg"
  relative_install_dir = "init"

  subsystem_name = "multimedia"
  part_name = "player_framework"
}

